force-app/main/default/objects/Mobility_Speech__c/Mobility_Speech__c.object-meta.xml
<CustomObject>
    <label>Mobility/Speech</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Mobility/Speech Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobility/Speechs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>