force-app/main/default/objects/Mobility_Speech__c/fields/Child_Sat_Up__c.field-meta.xml
<CustomField>
    <fullName>Child_Sat_Up__c</fullName>
    <label>Child Sat Up</label>
    <length>100</length>
    <type>Text</type>
</CustomField>