force-app/main/default/objects/Mobility_Speech__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mobility/Speechs</relationshipLabel>
    <relationshipName>Mobility_Speechs</relationshipName>
    <type>Lookup</type>
</CustomField>