force-app/main/default/objects/Mobility_Speech__c/fields/Mobility_Speech_Info_Unknown__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Speech_Info_Unknown__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobility/Speech Info Unknown</label>
    <type>Checkbox</type>
</CustomField>