force-app/main/default/objects/Mobility_Speech__c/fields/Talked__c.field-meta.xml
<CustomField>
    <fullName>Talked__c</fullName>
    <label>Talked</label>
    <length>100</length>
    <type>Text</type>
</CustomField>