force-app/main/default/objects/Mobility_Speech__c/fields/Walked__c.field-meta.xml
<CustomField>
    <fullName>Walked__c</fullName>
    <label>Walked</label>
    <length>100</length>
    <type>Text</type>
</CustomField>